--- a/shop-demo/src/myStyles.scss
+++ b/shop-demo/src/myStyles.scss
@@ -108,3 +108,44 @@ $secondary: #F2F2F2;
 .card:hover{
     box-shadow: 0px 0px 5px #8d8d8d inset;
 }
+
+.list-group{
+    .list-group-item{
+        border: none;
+        background-color: transparent;
+    }
+}
+
+.mt-remove-on-md{
+
+    @media screen and (min-width:768px) {
+        margin-top: 0rem !important;
+	}
+}
+
+.row {
+    @media screen and (max-width:768px) {
+        padding-left: .25rem;
+        padding-right: .25rem;
+	}
+}
+
+
+.remove-on-sm {
+    @media screen and (max-width:768px) {
+        display: none;
+	}
+}
+
+.shrink-on-md {
+    width: 100%;
+    @media screen and (min-width:768px) {
+        width: fit-content;
+	}
+}
+
+.inherit-width-md{
+    @media screen and (min-width:768px) {
+        width: fit-content !important;
+	}
+}
