--- a/shop-demo/src/myStyles.scss
+++ b/shop-demo/src/myStyles.scss
@@ -116,6 +116,10 @@ $secondary: #F2F2F2;
     }
 }
 
+.fit-content-div{
+    width: fit-content;
+}
+
 .mt-remove-on-md{
 
     @media screen and (min-width:768px) {
